# cc-core

./: .dockerignore  .gitignore  Dockerfile  NOTICE  README.md  ccagent-red.cwl  pyproject.toml  requirements.txt  setup.py
cc_core/: version.py
cc_core/agent/: main.py
cc_core/agent/blue/: __main__.py  main.py
cc_core/agent/connected/: main.py
cc_core/agent/cwl/: main.py
cc_core/agent/cwl_io/: __main__.py  main.py
cc_core/agent/red/: main.py
cc_core/commons/: cwl.py  cwl_io.py  docker_utils.py  engines.py  exceptions.py  files.py  gpu_info.py  helper.py  input_references.py  jinja.py  mnt_core.py  parsing.py  red.py  red_to_blue.py  schema_list.py  schema_map.py  schema_transform.py  secrets.py  shell.py  templates.py  yaml.py
cc_core/commons/connectors/: http.py
cc_core/commons/schemas/: common.py  connectors.py  cwl.py  faice.py  red.py
cc_core/commons/schemas/engines/: build.py  container.py  execution.py  hardware.py  os.py  source.py  virtualization.py
tests/commons/: test_input_references.py  test_schema_transform.py
