[tool.poetry]
name = "cc-core"
version = "8.0.0"
authors = ["Christoph Jansen <Christoph.Jansen@htw-berlin.de>", "Bruno Schilling <Bruno.Schilling@student.htw-berlin.de>"]
license = "AGPL-3.0"
readme = "README.md"
repository = "https://github.com/curious-containers/cc-core"
homepage = "https://www.curious-containers.cc/"
description = "CC-Core is part of the Curious Containers project. It provides common functionality for other parts of Curious Containers and implements agents to run data-driven experiments defined in RED or CWL format."

[tool.poetry.dependencies]
python = "^3.5"
docker = "^4.0"
jsonschema = "^3.1"
"ruamel.yaml" = "^0.16.5"

[tool.poetry.dev-dependencies]
pytest = "^4.3"
